tests/NormalTests/paczka1/fuzzy1/46169868.err
Error in line 26: upol6giUj A77 28,4
Error in line 28: upol6giUj A450 22,3
Error in line 33: IV1 A 64,5
Error in line 37: A77 S3X4 145,7
Error in line 19: iJSXWF S364 125,3
